# hackerrank

./: .gitattributes  .gitignore  CMakeLists.txt  README.rst  build.bat  build.sh  check.sh
cmake/: pdhkr_add_tests.cmake  pdhkr_testing.cmake
data/equal_stacks/: 11.in  11.out  27.in  27.out
data/jesse_and_cookies/: 2.in  6.in  8.in
data/journey_to_moon/: 10.in
data/max_stack_element/: 14.in
data/merge_sorted_linked_lists/: 0.in  3.out  5.in  5.out
data/node_from_tail/: 4.in  5.in
data/subtrees_and_paths/: 1.out  13.in  13.out  2.in  2.out  3.in  3.out
data/swap_tree_nodes/: 9.in  9.out
data/tree_top_view/: 4.in  4.out
include/pdhkr/: common.h  compare.hh  features.h  string.hh  testing.hh  type_traits.hh
src/: CMakeLists.txt  array_manipulation.cc  equal_stacks.cc  jesse_and_cookies.cc  journey_to_moon.cc  max_stack_element.cc  merge_sorted_linked_lists.cc  node_from_tail.cc  roads_and_libraries.cc  running_median.cc  subtrees_and_paths.cc  swap_tree_nodes.cc  tree_level_order.cc  tree_top_view.cc  two_stack_game.cc
